[gd_scene load_steps=7 format=2]

[ext_resource path="res://Items/DoorClose.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Door.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 2.5 )

[sub_resource type="OccluderPolygon2D" id=2]
polygon = PoolVector2Array( -16, 24, -16, 24, 16, 24, 16, 24 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 19.5, 13.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 16, 1.5 )

[node name="Door" type="StaticBody2D"]
z_index = 3
collision_mask = 4
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
light_mask = 2
texture = ExtResource( 1 )

[node name="MainCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 21.5 )
shape = SubResource( 1 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 2 )

[node name="Z_index" type="Area2D" parent="." groups=["Z_index"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Z_index"]
position = Vector2( 0, -2.5 )
shape = SubResource( 3 )

[node name="DoorLock" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorLock"]
position = Vector2( 0, 25.5 )
shape = SubResource( 6 )

[connection signal="area_entered" from="Z_index" to="." method="_on_Z_index_area_entered"]
[connection signal="area_exited" from="Z_index" to="." method="_on_Z_index_area_exited"]
[connection signal="body_entered" from="DoorLock" to="." method="_on_DoorLock_body_entered"]
